# django_hw2

./: .env_example  catalog_data.json  groups.json  manage.py  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_data_to_db.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_owner.py  0004_product_is_published.py  0005_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  plug.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: my_tag.py
config/: settings.py  urls.py
django_hw2/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: new_password.html  user_form.html
